--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    repositories {
+        google()
+    }
+    dependencies {
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.0")
+        classpath 'com.google.gms:google-services:4.3.15'
+    }
+}
 plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id("com.google.gms.google-services") version "4.3.15" apply false
 }
 
 task clean(type: Delete) {
