--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,20 +27,21 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_18
+        targetCompatibility JavaVersion.VERSION_18
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '18'
     }
     buildFeatures {
         viewBinding true
     }
+    namespace 'com.selcannarin.schoolbustrackerdriver'
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -52,16 +53,23 @@ dependencies {
     implementation("androidx.navigation:navigation-ui-ktx:2.6.0")
     //Location services
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
     //Firebase firestore
     implementation 'com.google.firebase:firebase-firestore-ktx:24.7.0'
     //Firebase auth
     implementation 'com.google.firebase:firebase-auth-ktx:22.1.0'
+    //Firebase Storage
+    implementation 'com.google.firebase:firebase-storage-ktx:20.2.1'
     //Hilt
     implementation 'com.google.dagger:hilt-android:2.44'
     kapt 'com.google.dagger:hilt-compiler:2.44'
     //Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1"
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.7.1")
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    //gif
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.27'
 
 
 }
