--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,11 @@
 buildscript {
     repositories {
         google()
+        mavenCentral()
     }
     dependencies {
-        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.0")
+        classpath 'com.android.tools.build:gradle:8.1.0'
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.6.0")
         classpath 'com.google.gms:google-services:4.3.15'
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.44"
     }
