--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'com.google.gms.google-services'
     id 'com.google.dagger.hilt.android'
     id 'kotlin-kapt'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
@@ -70,6 +71,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     //gif
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.27'
-
 
 }
