--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx:22.1.0'
     //Firebase Storage
     implementation 'com.google.firebase:firebase-storage-ktx:20.2.1'
+    //Firebase messaging
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.2.1'
     //Hilt
     implementation 'com.google.dagger:hilt-android:2.44'
     kapt 'com.google.dagger:hilt-compiler:2.44'
@@ -71,5 +73,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     //gif
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.27'
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
 }
